# cotc-project

./: .gitignore  README.md  app.py  logger.py  metrics.py  p  pyproject.toml
application/: __init__.py  __main__.py  base.py  db.py  logger.py  main.py  metrics.py  models.py
application/bak/: _app.py  app.py.bak.2  latest.html.bak2  styles.css.bak2
application/common/: __init__.py  _types.py  console_io.py  util.py
application/config/: config.json  logging_config.json  logging_config.py
application/static/css/: base.css  history.css  latest.css  styles.css
application/templates/: base.html  history.html  index.html  latest.html
config/: .flaskenv  logging_config.json
instance/: db.sqlite3
templates/: index.html
