[project]
name = "cotc-project"
version = "0.1.0"
description = "'Context of the Code' Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "python-dotenv>=1.0.1",
    "psutil>=6.1.1",
    "types-psutil>=6.1.0.20241221",
    "flask-socketio>=5.5.1",
    "types-flask-socketio>=5.5.0.20241227",
]
